# naspy-ioc

./: README.md  pyproject.toml  requirements.txt
naspy/: __init__.py  auth_guard.py  decorators.py  exception_filter.py  guard_middleware.py  i_guard.py  ioc.py  lifetime_enum.py  request_logger.py  scope_context.py  scope_middleware.py  use_guards.py
naspy/config/: settings.py
naspy/database/: __init__.py  base_repository.py  database.py
